# BDAMinimalTestCase

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt
src/: MinimalTestCase.cc
